# Smart-Healthcare-Routing-System

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
backend/: requirements.txt
backend/api/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/pages/: AdminPanel.jsx  Dashboard.jsx  PatientForm.jsx  RadarView.jsx  RadarView3D.jsx
openenv_env/: healthcare_env.py  task.py
rl/: dqn_agent.py
rl/models/: dqn_healthcare.pth
server/: app.py
